--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "README.md"
   ],
   "scripts": {
-    "prepublishOnly": "asciidoctor -b docbook -a npm-readme -o - README.adoc | pandoc -f docbook -t markdown_github -o README.md"
+    "prepublishOnly": "asciidoctor -b docbook -a npm-readme -o - README.adoc | pandoc -f docbook -t gfm --base-header-level 2 -o README.md"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
