--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "README.md"
   ],
   "scripts": {
-    "prepublishOnly": "asciidoctor -b docbook -a npm-readme -o - README.adoc | pandoc -f docbook -t gfm --base-header-level 2 -o README.md"
+    "prepublishOnly": "asciidoctor -b docbook -a npm-readme -a gh-branch=v$npm_package_version -o - README.adoc | pandoc -f docbook -t gfm --base-header-level 2 -o README.md"
   },
   "dependencies": {
     "@babel/helper-plugin-utils": "^7.10.4",
