--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.12.1",
     "@babel/plugin-proposal-unicode-property-regex": "^7.12.1",
-    "@babel/plugin-transform-block-scoping": "^7.12.1",
     "@babel/plugin-transform-classes": "^7.12.1",
     "@babel/plugin-transform-destructuring": "^7.12.1",
     "@babel/plugin-transform-dotall-regex": "^7.12.1",
@@ -43,9 +42,7 @@
     "@babel/plugin-transform-object-super": "^7.12.1",
     "@babel/plugin-transform-parameters": "^7.12.1",
     "@babel/plugin-transform-spread": "^7.12.1",
-    "@babel/plugin-transform-unicode-escapes": "^7.12.1",
-    "@babel/plugin-transform-unicode-regex": "^7.12.1",
-    "babel-plugin-transform-async-to-promises": "^0.8.15"
+    "@babel/plugin-transform-unicode-regex": "^7.12.1"
   },
   "peerDependencies": {
     "@babel/core": "^7.12.1"
