CI: Replace ubuntu-20.04 with ubuntu-latest

--- a/.github/workflows/npmjs.yml
+++ b/.github/workflows/npmjs.yml
@@ -5,7 +5,7 @@ on:
       - 'v*'
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Install asciidoctor and pandoc
         run: sudo apt-get install asciidoctor pandoc
