--- a/.github/workflows/npmjs.yml
+++ b/.github/workflows/npmjs.yml
@@ -13,7 +13,7 @@ jobs:
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v2
         with:
-          node-version: '12.x'
+          node-version: 'lts/*'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn install
       - run: yarn publish
