--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@babel/plugin-transform-unicode-regex": "^7.18.6"
   },
   "peerDependencies": {
-    "@babel/core": "^7.21.8"
+    "@babel/core": "^7.0.0-0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8"
